src/objects/DRDW_Budget_Master__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Name_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Name Title</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DRDW_Capability__c.Related_Idea__c</field>
                <operation>equals</operation>
                <valueField>$Source.Related_To__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DRDW_Capability__c</referenceTo>
        <relationshipLabel>DRDW Budget Master (Activity Name Title)</relationshipLabel>
        <relationshipName>DRDW_Budget_Master1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>DRDW_Capability__c.Related_Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Related_To__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DRDW_Capability__c</referenceTo>
        <relationshipLabel>DRDW Budget Master</relationshipLabel>
        <relationshipName>DRDW_Budget_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_bck__c</fullName>
        <formula>Activity__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_CenterBCK__c</fullName>
        <formula>Cost_Center__r.Name</formula>
        <label>Cost Center b</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Cannot Create BudgetLineItem for Inactive CostCenter</errorMessage>
            <filterItems>
                <field>DRDW_Cost_Center__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DRDW_Cost_Center__c</referenceTo>
        <relationshipLabel>DRDW Budget Master</relationshipLabel>
        <relationshipName>DRDW_Budget_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center_txt__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone 1 Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone 2 Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_3_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone 3 Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Milestone_1__c</fullName>
        <label>Other Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Milestone_2__c</fullName>
        <label>Other Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Milestone_3__c</fullName>
        <label>Other Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Milestone_1__c</fullName>
        <label>Payment Milestone 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Upon signature of contract (no more than 50%)</fullName>
                </value>
                <value>
                    <fullName>Initiation of contract</fullName>
                </value>
                <value>
                    <fullName>Start of live phase</fullName>
                </value>
                <value>
                    <fullName>End of live phase</fullName>
                </value>
                <value>
                    <fullName>Draft Report</fullName>
                </value>
                <value>
                    <fullName>Final Report</fullName>
                </value>
                <value>
                    <fullName>Upon receipt of results</fullName>
                </value>
                <value>
                    <fullName>Upon shipment of material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Milestone_2__c</fullName>
        <label>Payment Milestone 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Upon signature of contract (no more than 50%)</fullName>
                </value>
                <value>
                    <fullName>Initiation of contract</fullName>
                </value>
                <value>
                    <fullName>Start of live phase</fullName>
                </value>
                <value>
                    <fullName>End of live phase</fullName>
                </value>
                <value>
                    <fullName>Draft Report</fullName>
                </value>
                <value>
                    <fullName>Final Report</fullName>
                </value>
                <value>
                    <fullName>Upon receipt of results</fullName>
                </value>
                <value>
                    <fullName>Upon shipment of material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Milestone_3__c</fullName>
        <label>Payment Milestone 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Upon signature of contract (no more than 50%)</fullName>
                </value>
                <value>
                    <fullName>Initiation of contract</fullName>
                </value>
                <value>
                    <fullName>Start of live phase</fullName>
                </value>
                <value>
                    <fullName>End of live phase</fullName>
                </value>
                <value>
                    <fullName>Draft Report</fullName>
                </value>
                <value>
                    <fullName>Final Report</fullName>
                </value>
                <value>
                    <fullName>Upon receipt of results</fullName>
                </value>
                <value>
                    <fullName>Upon shipment of material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Amount_for_Milestone_1__c</fullName>
        <label>Planned Amount for Milestone 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Amount_for_Milestone_2__c</fullName>
        <label>Planned Amount for Milestone 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Amount_for_Milestone_3__c</fullName>
        <label>Planned Amount for Milestone 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>DRDW_Project__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Idea_Project</value>
            </filterItems>
            <filterItems>
                <field>DRDW_Project__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Assessment_Project</value>
            </filterItems>
            <filterItems>
                <field>DRDW_Project__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Generation_Project</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipLabel>DRDW Budget Master</relationshipLabel>
        <relationshipName>DRDW_Budget_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scientist_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scientist/Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Budget_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titletab__c</fullName>
        <formula>IF( Activity__c !=NULL,IF(Activity__r.Title_ex__c!=NULL,Activity__r.Title_ex__c,Activity__r.Title__c) ,IF( Related_To__c !=NULL,IF(Related_To__r.Project_Name__c!=Null,Related_To__r.Project_Name__c,Related_To__r.Idea_Name__c),&apos;Budget Title&apos; ))</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actuals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Business_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Business Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_F_X_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total F&quot;X&quot; Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rolling_Forecast__c</fullName>
        <label>Total Rolling Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendorr__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_name__c</fullName>
        <formula>Related_To__r.Name__c</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRDW Budget Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BGT-{0000}</displayFormat>
        <label>DRDW Budget Master  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Budget Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_cannot_be_less_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Contract_End_Date__c &lt;  Contract_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Contract_End_Date__c</errorDisplayField>
        <errorMessage>Contract End Date Cannot Be Less Than Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>